# napari-features

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  tox.ini
.napari/: config.yml
docs/: conf.py  index.rst
examples/: feature_extraction.ipynb
napari_features/: __init__.py  _cache.py  _dock_widget.py  _feature_selection_widget.py  _feature_specification.py  _features.py  _featurize.py  _generate.py  _generator.py  _tree_widget_item.py  features.py  generator.py  table.py  tree_widget_item.py
napari_features/_tests/: test_features.py  test_generator.py  test_table.py
napari_features/data/translations/: en.json
