[metadata]
name = napari-features
version = 0.0.1
author = Allen Goodman
author_email = allen.goodman@icloud.com
license = MIT
url = https://github.com/0x00b1/napari-features
description = extracts image and object features
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/0x00b1/napari-features/issues
    Documentation = https://github.com/0x00b1/napari-features#README.md
    Source Code = https://github.com/0x00b1/napari-features
    User Support = https://github.com/0x00b1/napari-features/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    napari-features = napari_features
