[metadata]
author = Allen Goodman
author_email = allen.goodman@icloud.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
description = extracts image and object features
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
name = napari-features
project_urls =
    Bug Tracker = https://github.com/0x00b1/napari-features/issues
    Documentation = https://github.com/0x00b1/napari-features#README.md
    Source Code = https://github.com/0x00b1/napari-features
    User Support = https://github.com/0x00b1/napari-features/issues
url = https://github.com/0x00b1/napari-features
version = 0.1.1

[options]
install_requires =
    magicgui>=0.2.9
    napari>=0.4.10
    napari-plugin-engine>=0.1.4
    numpy>=1.19.5
    pandas>=1.2.4
    qtpy>=1.9.0
    scikit-image>=0.18.1
    scipy>=1.4.1
packages = find:
python_requires = >=3.7

[options.entry_points] 
napari.plugin = 
    napari-features = napari_features
